# fltk-theme

./: Cargo.toml  README.md  bind.sh  build.rs
.github/workflows/: rust.yml
examples/: aqua2.rs  aqua_dark.rs  black.map  dark.map  dynamic.rs  ex1.rs  ex2.rs  fleet_color_themes.rs  fleet_themes.rs  fluent.rs  fluent_dark.rs  frames.rs  hello.rs  html_colors.rs  inline.rs  load.rs  predef_color.rs  svg_based.rs  sweet_dark.rs  tabs.rs  term.rs  widget_scheme.rs  widget_theme.rs
examples/themes/: plain-gray.map  shake.map  tan.map
src/: cocoa_helper.h  cocoa_helper.m  cocoa_helper.rs  lib.rs
src/color_themes/: black.rs  fleet.rs  fleet2.rs  mod.rs
src/colors/: aqua.rs  html.rs  mod.rs
src/colors/aqua/: dark.rs  light.rs  mod.rs  sys.rs
src/colors/sweet/: dark.rs  light.rs  mod.rs
src/widget_schemes/: aqua.rs  crystal.rs  fleet.rs  fluent.rs  gleam.rs  mod.rs  svg_based.rs  svg_round.rs  sweet.rs
src/widget_themes/: aero.rs  aqua.rs  aqua2.rs  aqua_classic.rs  aqua_dark.rs  aqua_light.rs  blue.rs  classic.rs  dark.rs  fluent.rs  greybird.rs  high_contrast.rs  metro.rs  mod.rs
