[package]
name = "fltk-theme"
version = "0.7.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "A theming crate for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-theme"
documentation = "https://docs.rs/fltk-theme"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
exclude = ["/screenshots", "./examples"]

[dependencies]
fltk = "1.4.0"
lazy_static = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa-colors = { version = "0.1.2", optional = true }

[dev-dependencies]
color-maps = "0.1"
